@@ -10,7 +10,7 @@ Please report any issue over on [GitHub here](https://github.com/ramdor/Thetis/i
 - [add] or decreased option added to "Force ATT on Tx to 31 when Drive or Tune power is increased and PS-A is on"
 - [add] tool tips add to fields and options in the linearity form
 - [add] many tool tips added to DSP setup form
-- [add] software sidetone option added. New options in DSP->CW. Audio via cmASIO + VAC.
+- [add] software sidetone option added. New options in Setup->DSP->CW. Audio via cmASIO + VAC.
 - [change] exporting a tx profile will now ask for destination location and filename. It will complain if filename already exists
 - [change] restored step attenuator RX1 if HERMES is used. Unsure why I disabled it a few years ago
 - [change] the bespoke TCI command tx_frequency has changed back to the following as per the TCI protocol, tx_frequency:3700000; . There is now a bespoke Thetis message also sent out at the same time, tx_frequency_thetis:3700000,b80m,false,false;
@@ -19,6 +19,7 @@ Please report any issue over on [GitHub here](https://github.com/ramdor/Thetis/i
 - [fix] cat IF command fix where an error (O;) message would be returned if an unsupported TuneStep was in use. This bug has existed since 25/02/2007
 - [fix] mode buttons when in collapsed mode should now work again when Thetis is first launched
 - [fix] when running multiple instances of Thetis, closing down others may cause issues with PerformaceCounter/CpuLoad display, resulting in endless error logs. This has been resolved
+- [fix] fixed wave record crash if Windows [Controlled folder access] is turned on. You have to add  C:\Users\<you>\Music  to the allowed list if you want to use the wave record when [Controlled folder access] is turned on
 
 ## v2.10.3.8 - Change Log
 - [fix] maintain delta checkbox now greyed if adjust min to noise floor is unchecked
